<?xml version="1.0"?>
<package>
  <name>test</name>
  <version>0.9.0</version>
  <description>The test package for the modularised planner downward</description>

  <maintainer email="g.burroughes@surrey.ac.uk">phuicy</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/test</url> -->


  <author email="g.burroughes@surrey.ac.uk">phuicy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>translate</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>translate</run_depend>
  <build_depend>downward_msgs</build_depend>
  <run_depend>downward_msgs</run_depend>



  <export>


  </export>
</package>
